add about section

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="container about">
           <div class="about-title-container">
             <span class="sub-text-one">About Me</span>
-            <h3 class="sub-text-one">
+            <h3 class="heading-two">
               A Passionate Developer Who Loves to Code
             </h3>
           </div>
@@ -91,8 +91,8 @@
               <img src="./assets/samson.jpg" alt="" />
             </div>
 
-            <div class="right">
-              <h3 class="title">About Me</h3>
+            <div class="right-about-content">
+              <h3 class="heading-three title">About Me</h3>
               <p>
                 Hello! I'm Samson Ameh, a passionate and dedicated frontend
                 developer. I have a strong foundation in
@@ -107,38 +107,8 @@
                 skills in the ever-evolving field of frontend development.
               </p>
 
-              <div class="list">
-                <ul>
-                  <li>
-                    <ul>
-                      <li>
-                        <span>Name</span>
-                        <p>Samson Ameh</p>
-                      </li>
-                      <li>
-                        <span>Email</span>
-                        <p>amehsam69@gmail.com</p>
-                      </li>
-                      <li>
-                        <span>Phone</span>
-                        <p>+2348165530462</p>
-                      </li>
-                    </ul>
-                  </li>
-
-                  <li>
-                    <ul>
-                      <li>
-                        <span>Address</span>
-                        <p>Lagos, Nigeria</p>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-
-              <div class="button-container">
-                <a href="" class="btn download-cv"></a>
+              <div class="flex-center cta-container">
+                <a href="" class="btn download-cv">Download CV</a>
               </div>
             </div>
           </div>
@@ -149,9 +119,9 @@
 
       <section class="section portfolio-section portfolio-wrapper">
         <div class="container portfolio-container">
-          <div class="title">
-            <span>Portfolio</span>
-            <h3>What I Do for My Clients</h3>
+          <div class="portfolio-title-container">
+            <span class="sub-text-one">Portfolio</span>
+            <h3 class="heading-two">What I Do for My Clients</h3>
           </div>
 
           <div class="portfolio-container">
@@ -170,6 +140,13 @@
       </section>
 
       <!-- contact -->
+
+      <!-- footer -->
+      <footer class="footer-wrapper">
+        <div class="flex-center container footer-container">
+          <p class="secondary-text">&copy;2024 SAMSON AMEH</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
