--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <!-- main/hero -->
 
-      <main class="flex-center section main-section main-wrapper">
+      <main id="home" class="flex-center section main-section main-wrapper">
         <div class="container main">
           <div class="left-main-content">
             <h3 class="heading-one text-center">
@@ -77,7 +77,7 @@
 
       <!-- about -->
 
-      <section class="section about-section section-wrapper">
+      <section id="about" class="section about-section section-wrapper">
         <div class="container about">
           <div class="about-title-container">
             <span class="sub-text-one">About Me</span>
@@ -107,8 +107,8 @@
                 skills in the ever-evolving field of frontend development.
               </p>
 
-              <div class="flex-center cta-container">
-                <a href="" class="btn download-cv">Download CV</a>
+              <div class="flex-center cta-container download-cv">
+                <a href="" class="btn">Download CV</a>
               </div>
             </div>
           </div>
@@ -121,21 +121,98 @@
         <div class="container portfolio-container">
           <div class="portfolio-title-container">
             <span class="sub-text-one">Portfolio</span>
-            <h3 class="heading-two">What I Do for My Clients</h3>
+            <h3 class="heading-two">Some of my Projects</h3>
           </div>
 
-          <div class="portfolio-container">
-            <div class="portfolio">
-              <div class="image">
-                <img src="./assets/hero-img.jpeg" alt="" />
+          <div class="portfolio-card-container">
+            <div class="portfolio-card">
+              <div class="flex-center image">
+                <img src="./assets/bg.jpg" alt="" />
               </div>
-
-              <div class="details">
-                <h3>Game Haven</h3>
-                <a href=""><span>Live Site</span></a>
+              <div class="card-des">
+                <h3 class="heading-three">Gamen Haven</h3>
+                <a href="" class="btn portfolio-links"
+                  ><span>Live Site</span></a
+                >
+                <a href="" class="btn portfolio-links"><span>Github</span></a>
+              </div>
+            </div>
+            <div class="portfolio-card">
+              <div class="flex-center image">
+                <img src="./assets/bg.jpg" alt="" />
+              </div>
+              <div class="card-des">
+                <h3 class="heading-three">Gamen Haven</h3>
+                <a href="" class="btn portfolio-links"
+                  ><span>Live Site</span></a
+                >
+                <a href="" class="btn portfolio-links"><span>Github</span></a>
+              </div>
+            </div>
+            <div class="portfolio-card">
+              <div class="flex-center image">
+                <img src="./assets/bg.jpg" alt="" />
+              </div>
+              <div class="card-des">
+                <h3 class="heading-three">Gamen Haven</h3>
+                <a href="" class="btn portfolio-links"
+                  ><span>Live Site</span></a
+                >
+                <a href="" class="btn portfolio-links"><span>Github</span></a>
+              </div>
+            </div>
+            <div class="portfolio-card">
+              <div class="flex-center image">
+                <img src="./assets/bg.jpg" alt="" />
+              </div>
+              <div class="card-des">
+                <h3 class="heading-three">Gamen Haven</h3>
+                <a href="" class="btn portfolio-links"
+                  ><span>Live Site</span></a
+                >
+                <a href="" class="btn portfolio-links"><span>Github</span></a>
               </div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <!-- gallery -->
+      <section class="section gallery-section gallery-wrapper">
+        <div class="container">
+          <div class="gallery-title-container">
+            <span class="sub-text-one">Memory Snippets</span>
+            <h3 class="heading-two">Pictures Gallery</h3>
+          </div>
+
+          <div class="gallery-container">
+            <div class="gallery-item">
+              <img src="./assets/image-1.jpg" alt="" />
+            </div>
+            <div class="gallery-item large">
+              <img src="./assets/image-2.jpg" alt="" />
+            </div>
+            <div class="gallery-item">
+              <img src="./assets/image-3.jpg" alt="" />
+            </div>
+            <div class="gallery-item tall">
+              <img src="./assets/image-4.jpg" alt="" />
+            </div>
+            <div class="gallery-item">
+              <img src="./assets/image-5.jpg" alt="" />
+            </div>
+            <div class="gallery-item">
+              <img src="./assets/image-6.jpg" alt="" />
+            </div>
+            <div class="gallery-item large">
+              <img src="./assets/image-7.jpg" alt="" />
+            </div>
+            <div class="gallery-item">
+              <img src="./assets/image-8.jpg" alt="" />
+            </div>
+          </div>
+
+          <div class="gallery-control"></div>
         </div>
       </section>
 
@@ -148,5 +225,7 @@
         </div>
       </footer>
     </div>
+
+    <script src="./main.js"></script>
   </body>
 </html>
