--- a/index.html
+++ b/index.html
@@ -211,12 +211,36 @@
               <img src="./assets/image-8.jpg" alt="" />
             </div>
           </div>
-
-          <div class="gallery-control"></div>
         </div>
       </section>
 
       <!-- contact -->
+
+      <section id="contact" class="contact-wrapper">
+        <div class="container">
+          <div class="gallery-title-container">
+            <span class="sub-text-one">Memory Snippets</span>
+            <h3 class="heading-two">I Want to Hear from You</h3>
+          </div>
+          <form class="contact-form">
+            <div class="form-group">
+              <label for="name">Your Name:</label>
+              <input type="text" id="name" name="name" required />
+            </div>
+            <div class="form-group">
+              <label for="email">Your Email:</label>
+              <input type="email" id="email" name="email" required />
+            </div>
+            <div class="form-group">
+              <label for="message">Message:</label>
+              <textarea id="message" name="message" required></textarea>
+            </div>
+            <div class="form-group">
+              <button class="btn" type="submit">Send Message</button>
+            </div>
+          </form>
+        </div>
+      </section>
 
       <!-- footer -->
       <footer class="footer-wrapper">
