--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="#">Home</a>
             <a href="#about">About</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="#cv">CV</a>
+            <a href="#gallery">Gallery</a>
             <a href="#contact">Contact</a>
           </nav>
         </header>
@@ -117,7 +117,10 @@
 
       <!-- portfolio -->
 
-      <section class="section portfolio-section portfolio-wrapper">
+      <section
+        id="portfolio"
+        class="section portfolio-section portfolio-wrapper"
+      >
         <div class="container portfolio-container">
           <div class="portfolio-title-container">
             <span class="sub-text-one">Portfolio</span>
@@ -125,7 +128,7 @@
           </div>
 
           <div class="portfolio-card-container">
-            <div class="portfolio-card">
+            <!-- <div class="portfolio-card">
               <div class="flex-center image">
                 <img src="./assets/bg.jpg" alt="" />
               </div>
@@ -172,13 +175,13 @@
                 >
                 <a href="" class="btn portfolio-links"><span>Github</span></a>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
 
       <!-- gallery -->
-      <section class="section gallery-section gallery-wrapper">
+      <section id="gallery" class="section gallery-section gallery-wrapper">
         <div class="container">
           <div class="gallery-title-container">
             <span class="sub-text-one">Memory Snippets</span>
