--- a/index.html
+++ b/index.html
@@ -127,56 +127,7 @@
             <h3 class="heading-two">Some of my Projects</h3>
           </div>
 
-          <div class="portfolio-card-container">
-            <!-- <div class="portfolio-card">
-              <div class="flex-center image">
-                <img src="./assets/bg.jpg" alt="" />
-              </div>
-              <div class="card-des">
-                <h3 class="heading-three">Gamen Haven</h3>
-                <a href="" class="btn portfolio-links"
-                  ><span>Live Site</span></a
-                >
-                <a href="" class="btn portfolio-links"><span>Github</span></a>
-              </div>
-            </div>
-            <div class="portfolio-card">
-              <div class="flex-center image">
-                <img src="./assets/bg.jpg" alt="" />
-              </div>
-              <div class="card-des">
-                <h3 class="heading-three">Gamen Haven</h3>
-                <a href="" class="btn portfolio-links"
-                  ><span>Live Site</span></a
-                >
-                <a href="" class="btn portfolio-links"><span>Github</span></a>
-              </div>
-            </div>
-            <div class="portfolio-card">
-              <div class="flex-center image">
-                <img src="./assets/bg.jpg" alt="" />
-              </div>
-              <div class="card-des">
-                <h3 class="heading-three">Gamen Haven</h3>
-                <a href="" class="btn portfolio-links"
-                  ><span>Live Site</span></a
-                >
-                <a href="" class="btn portfolio-links"><span>Github</span></a>
-              </div>
-            </div>
-            <div class="portfolio-card">
-              <div class="flex-center image">
-                <img src="./assets/bg.jpg" alt="" />
-              </div>
-              <div class="card-des">
-                <h3 class="heading-three">Gamen Haven</h3>
-                <a href="" class="btn portfolio-links"
-                  ><span>Live Site</span></a
-                >
-                <a href="" class="btn portfolio-links"><span>Github</span></a>
-              </div>
-            </div> -->
-          </div>
+          <div class="portfolio-card-container"></div>
         </div>
       </section>
 
