--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <main id="home" class="flex-center section main-section main-wrapper">
         <div class="container main">
-          <div class="left-main-content">
+          <div class="left left-main-content">
             <h3 class="heading-one text-center">
               Samson <span style="color: var(--accent)">Ameh</span>
             </h3>
@@ -67,7 +67,7 @@
             </div>
           </div>
 
-          <div class="right-main-content">
+          <div class="right right-main-content">
             <div class="image-container">
               <img src="./assets/samson.jpg" alt="" />
             </div>
@@ -87,11 +87,11 @@
           </div>
 
           <div class="inner-wrapper">
-            <div class="left-about-content left-about-image-container">
+            <div class="left left-about-content left-about-image-container">
               <img src="./assets/samson.jpg" alt="" />
             </div>
 
-            <div class="right-about-content">
+            <div class="right right-about-content">
               <h3 class="heading-three title">About Me</h3>
               <p>
                 Hello! I'm Samson Ameh, a passionate and dedicated frontend
