--- a/index.html
+++ b/index.html
@@ -108,7 +108,12 @@
               </p>
 
               <div class="flex-center cta-container download-cv">
-                <a href="" class="btn">Download CV</a>
+                <a
+                  href="./assets/SAM AMEH CV.pdf"
+                  download="SAM AMEH CV.pdf"
+                  class="btn"
+                  >Download CV</a
+                >
               </div>
             </div>
           </div>
@@ -190,7 +195,9 @@
               <textarea id="message" name="message" required></textarea>
             </div>
             <div class="flex-center sendMessage">
-              <button class="btn" type="submit">Send Message</button>
+              <button class="btn sendMessageBtn" type="submit">
+                Send Message
+              </button>
             </div>
           </form>
         </div>
