--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
             </p>
 
             <div class="flex-center cta-container">
-              <a href="#" class="btn cta">Get Connected</a>
+              <a
+                href="https://www.linkedin.com/in/samsonameh/"
+                target="_blank"
+                class="btn cta"
+                >Get Connected</a
+              >
             </div>
           </div>
 
