add date function

--- a/index.html
+++ b/index.html
@@ -210,9 +210,7 @@
 
       <!-- footer -->
       <footer class="footer-wrapper">
-        <div class="flex-center container footer-container">
-          <p class="secondary-text">&copy;2024 SAMSON AMEH</p>
-        </div>
+        <div class="flex-center container footer-container"></div>
       </footer>
     </div>
 
